# Conquer

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md  main.cpp  setup.sh
Data/: create_map.py  create_mapchart_config.py  create_pngs.py  label2csv.py
Data/legacy/: adjacentlabels.py  create_pngs.py  label2csv.py  label2pixel.csv
Data/mapchart/: countrys.txt  countrys_nuts2.txt  nuts2.txt  nuts3.txt
assets/: adjacency.csv
lib/Config/: Config.cpp  Config.hpp  DefaultConfig.h
lib/Controls/: Controls.cpp  Controls.hpp
lib/Engine/: Engine.cpp  Engine.hpp
lib/Map/: Map.cpp  Map.hpp  MapFileHandling.cpp
